AX: WebKit doesn't call [super -accessibilityAttributeValue:attribute forParameter:] when it encounters a parameterized attribute that it doesn't handle. https://bugs.webkit.org/show_bug.cgi?id=39324

Reviewed by Darin Adler.

Make sure that accessibilityAttributeValue:forParameter: will default to its super's implementation. This is how AppKit expects objects to behave.

* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):



Canonical link: https://commits.webkit.org/51358@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60307 268f45cc-cd09-0410-ab3c-d52691b4dbfc